syntax = "proto3";

package pb;
option go_package = "./proto";
import "google/protobuf/any.proto";


// 空消息
message Empty {}

// 返回用户信息
message UserInfo {
  int64 Id = 1;
  string Name = 2;
  string JwToKen = 3;
  string Avatar = 4;
  string ConnId = 5;
  repeated int64 Role = 6;
  repeated int64 Group = 7;
  map<string, google.protobuf.Any> Other = 8;

}

// 返回用户信息
service User {
  rpc GetUserInfo (Empty) returns (UserInfo) {}
}